kubernetes/posts-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
