kubernetes/posts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port: 
              number: 3000
